Bug #2194 - Accessibility: 2012 theme contrast error - hidden white text?
This text is actually hidden on purpose as an image replacement technique
- fix simply switches text color to meet contrast checker requirements

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -353,6 +353,7 @@
             }
             #wp-admin-bar-openlab{
                 > .ab-item{
+                    color: #000;
                     background: url('images/openlab_admin_bar_logo.png') #fff no-repeat 44% 58%;
                     padding: 51px 0 0;
                     width: 127px;
